--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="aside-inner">
         <!-- Logo -->
         <div class="logo">
-          <a href="#">Upvesh</a>
+          <a href="#">Tejas</a>
         </div>
         <!-- Nav -->
         <ul class="nav">
@@ -64,7 +64,7 @@
         <div class="container">
           <div class="intro">
             <img src="images/about.jpg" alt="profile" class="shadow-dark">
-            <h1>Upvesh Kumar</h1>
+            <h1>Tejas Metaliya</h1>
             <span class="iTyped"></span>
             <div class="social-links">
               <a href="#"><i class="fa fa-twitter"></i></a>
@@ -89,8 +89,8 @@
             <div class="about-content padd-15">
               <div class="row">
                 <div class="about-text padd-15">
-                  <h3>I'm Upvesh Kumar and <span>Web Developer</span></h3>
-                  <p>Hi! My name is Upvesh Kumar. I am a Web Developer, and I'm very passionate and dedicated
+                  <h3>I'm Tejas Metaliya and <span>Web Developer</span></h3>
+                  <p>Hi! My name is Tejas Metaliya. I am a Web Developer, and I'm very passionate and dedicated
                     to my work. With 10 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration. </p>
                 </div>
               </div>
