--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-  <title>Personal Portfolio Template</title>
+  <title>Tejas Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Template css Files -->
@@ -51,7 +51,7 @@
         </ul>
         <!-- Copyright -->
         <div class="copyright-text">
-          &copy; 2020 The WebShala Template
+          &copy; 2025 Tejas Metaliya Template
         </div>
       </div>
     </div>
@@ -70,7 +70,7 @@
               <a href="#"><i class="fa fa-twitter"></i></a>
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-instagram"></i></a>
-              <a href="#"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/tejas-metaliya-437358179"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -98,25 +98,25 @@
                 <div class="personal-info padd-15">
                   <div class="row">
                     <div class="info-item padd-15">
-                      <p>Birthday : <span>5 June 1992</span></p>
+                      <p>Birthday : <span>11 November 1999</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Age : <span>28</span></p>
+                      <p>Age : <span>25</span></p>
                     </div>
                     <div class="info-item padd-15">
                       <p>Website : <span>www.domain.com</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Email : <span>info@gmail.com</span></p>
+                      <p>Email : <span>metaliyatejas143@gmail.com</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Degree : <span>M.Tech</span></p>
+                      <p>Degree : <span>MCA</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Phone : <span>+91 8800 000 000</span></p>
+                      <p>Phone : <span>+91 7046484365</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>City : <span>Mumbai</span></p>
+                      <p>City : <span>Ahmedabad</span></p>
                     </div>
                     <div class="info-item padd-15">
                       <p>Freelance : <span>Available</span></p>
